2006-01-06  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* configure.ac :

	  - Every source is now compiled with -DTRIBE.

	* lib/list.h :
	* lib/mem.h :
	* lib/network.h :
	* lib/rel.h :
	* lib/rlist.h :
	* lib/rqueue.h :
	* lib/tribe.h :

	  - Added a smart EXTERN macro in front of each function.

2005-11-22  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* VERSION :
	* configure.ac :

	  - Version 0.3.3.

	* test/Makefile.in :

	  - tribe_test is now dependent on clist.h.

	* test/test.c :

	  - Added a test for tbe_net_get_tuples().

	* lib/Makefile.in :

	  - Now network.o is dependent on clist.h.

	* lib/network.c :
	* lib/network.h :

	  - Added a call to clist_verify() in get_tuple() to ensure that all
	    the variables in the clist are valid.

	  - Added a get_tuple() function so that a set of interval variables
	    can be grounded with intervals that satisfy the given constraints.

	* lib/clist.h :
	* lib/clist.c :

	  - Removed the offset parameter. clist doesn't care about literals. It
	    only cares about variables and the tuple in validate().

	* test/test.c :

	  - Renamed all test intervals so that they start with 0.

2005-11-21  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/mem.c :

	  - Debug version of tbe_mem_realloc() will no longer print FREE if the
	    original pointer is null.

2005-11-19  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/Makefile.in :
	* lib/clist.c :
	* lib/clist.h :

	  - Added clist for grounding of interval variables.

2005-11-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/network.c :

	  - get_intervals() will now only consider externally defined
	    intervals.

2005-11-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/network.c :
	* lib/network.h :

	  - Added get_intervals() which generates a list of intervals whose
	    relation with a given interval is a subset of a given relset, then
	    calls a given function for every matching interval.
